@@ -1,4 +1,0 @@
-@comment $NetBSD$
-bin/pdfxmltex
-bin/xmltex
-share/texmf/fmtutil/format.xmltex.cnf
